# mmLink

./: .gitignore  CMakeLists.txt  CameraConfig.cpp  FFt2Cudae2.cu  FileConfig.cpp  LICENSE  README.md  RadarConfig.cpp  TCPConfig.cpp  aboutwindow  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  datamanagement.cpp  datamanagement.h  filemanagement.cpp  license.cpp  license.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mmlink.pro  mmlink_us_EN.ts  mmlink_zh_CN.ts  mmwaveradar.cpp  mmwaveradar.h  mmwaveradarFFT.cpp  mmwaveradarfft.cpp  mmwaveradarfft.h  qwtplotshow.cpp  qwtplotshow.h  resource.qrc  uvccamera.cpp  uvccamera.h
bassmod/: contest.c
mmLink/: CameraConfig.cpp  LICENSE  RadarConfig.cpp  aboutwindow.cpp  aboutwindow.h  datamanagement.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mmlink.pro  mmlink_us_EN.ts  mmlink_zh_CN.ts  mmwaveradar.cpp  mmwaveradar.h  mmwaveradarfft.cpp  mmwaveradarfft.h  qwtplotshow.cpp  qwtplotshow.h  unix_resource.qrc  uvccamera.cpp  uvccamera.h
mmLink_RadarSimulation/: CMakeLists.txt  main.cpp  mmLink_RadarSimulation.cpp  mmLink_RadarSimulation.h  mmLink_RadarSimulation.pro  mmLink_RadarSimulation.ui
mmlink/: CMakeLists.txt  RadarConfig.cpp  aboutwindow.h  aboutwindow.ui  datamanagement.cpp  datamanagement.h  main.cpp  mainwindow.cpp  mainwindow.h  mmlink.pro  mmlink_us_EN.ts  mmlink_zh_CN.ts  mmwaveradar.cpp  mmwaveradar.h  qwtplotshow.cpp  uvccamera.cpp  uvccamera.h  windows_resource.qrc
